2008-01-02  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* gobject/gobjectmodule.c
	* gobject/gobjectmodule.c (pyg_get_application_name) 
	(pyg_get_prgname): Add wrappers for g_get_application_name and
	g_get_prgname.

2007-11-30  Rafael Villar Burke  <pachi@rvburke.com>

	* docs/reference/pygobject.xml: Add props attribute

2007-11-24  Paolo Borelli  <pborelli@katamail.com>

	* gobject/gobjectmodule.c (pyg_type_register): check for NULL before
	dereferencing.

2007-11-24  Paolo Borelli  <pborelli@katamail.com>

	* gobject/gobjectmodule.c (pyg_type_register): do not use a
	potentially uninitialized variable. Bug #499334.

2007-11-12  Johan Dahlin  <johan@gnome.org>

	* gobject/option.py (OptionParser.parse_args): 
	Set the default value of old_args to 0, so we don't end
	up slicing with None. Fixes #496278 (Vincent Untz)

2007-11-06  Johan Dahlin  <johan@gnome.org>

	* gobject/option.py (OptionParser.parse_args): Merge in values
	from all groups to the global option group. Slice up args
	so it doesn't return too much.

	* tests/test_option.py: Refactor to be unittesty,
	Add new tests to test what options returns.

2007-11-05  Johan Dahlin  <johan@gnome.org>

	* gobject/pygobject.h: 
	* gobject/gobjectmodule.c: 
	Add pyg_option_group_new to the public API

	* configure.ac: Branch, bump version to 2.15.0.

2007-10-16  Damien Carbery   <damien.carbery@sun.com>

	reviewed by: Johan Dahlin.

	* pygobject-2.0-uninstalled.pc.in: uninstalled.pc file missing
	'datadir' value. Fixes #486876.
    
2007-09-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Post-relase version bump.

=== 2.14.0 ===
2007-09-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Bump version to 2.14.0.

	* NEWS: Update NEWS for next release.

2007-09-06  John Finlay  <finlay@moeraki.com>

	* docs/xsl/fixxref.py.in: Remove DATADIR substitution since it now
	gets substituted as ${prefix}/share which doesn't work in a Python
	script.
